[gd_scene load_steps=30 format=2]

[ext_resource path="res://data/UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/Effects/Laser.png" type="Texture" id=2]
[ext_resource path="res://data/UI/RegTheme.theme" type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color( 0.243137, 0.243137, 0.243137, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -480.0
margin_right = 480.0
margin_bottom = 96.0
theme = ExtResource( 3 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -480.0
margin_right = 480.0
margin_bottom = 96.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="ToolButton" parent="NinePatchRect/HBoxContainer"]
margin_left = 88.0
margin_right = 141.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Resume"

[node name="VSeparator" type="VSeparator" parent="NinePatchRect/HBoxContainer"]
margin_left = 145.0
margin_right = 215.0
margin_bottom = 96.0
rect_min_size = Vector2( 70, 0 )
custom_styles/separator = SubResource( 1 )

[node name="Options" type="ToolButton" parent="NinePatchRect/HBoxContainer"]
margin_left = 219.0
margin_right = 274.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Options"

[node name="VSeparator4" type="VSeparator" parent="NinePatchRect/HBoxContainer"]
margin_left = 278.0
margin_right = 348.0
margin_bottom = 96.0
rect_min_size = Vector2( 70, 0 )
custom_styles/separator = SubResource( 1 )

[node name="Restart" type="ToolButton" parent="NinePatchRect/HBoxContainer"]
margin_left = 352.0
margin_right = 408.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "Restart"

[node name="VSeparator3" type="VSeparator" parent="NinePatchRect/HBoxContainer"]
margin_left = 412.0
margin_right = 482.0
margin_bottom = 96.0
rect_min_size = Vector2( 70, 0 )
custom_styles/separator = SubResource( 1 )

[node name="ReturnToSpace" type="ToolButton" parent="NinePatchRect/HBoxContainer"]
margin_left = 486.0
margin_right = 617.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Return to Space"

[node name="VSeparator2" type="VSeparator" parent="NinePatchRect/HBoxContainer"]
margin_left = 621.0
margin_right = 691.0
margin_bottom = 96.0
rect_min_size = Vector2( 70, 0 )
custom_styles/separator = SubResource( 1 )

[node name="ReturnToMain" type="ToolButton" parent="NinePatchRect/HBoxContainer"]
margin_left = 695.0
margin_right = 871.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "Return to Main Menu"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/ReturnToSpace" to="." method="_on_ReturnToSpace_pressed"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/ReturnToMain" to="." method="_on_ReturnToMain_pressed"]
